# restmail-receiver

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  debug-k8s-ports.sh  diagnose-k8s-storage.sh  migrate-to-pvc.sh  schema.sql  setup-api-credentials.sh  setup-dev.sh  test-k8s-on-vps.sh  test_env.sh  test_restmail.py  test_restmail.sh  verify-setup.sh
deploy/: 1  docker-compose.yml  restmail-k8s-pvc.yaml  restmail-k8s.yaml
src/: api_client.rs  email_parser.rs  main.rs
